<resources>
    <string name="app_name">TTTM</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_name">Berkah Ramadhan</string>
    <string name="title_about">About</string>
    <string name="title_credit">Created by BMS</string>
    <string name="website">Website : bms.id</string>
    <string name="title_email">berkah_ramadhan1441@gmail.com</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="large_text">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys
        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="text_none">-</string>
    <string name="text_zero">0</string>
    <string name="title_seller">Detail Produk</string>
    <string name="berat_produk">Berat Produk : </string>
    <string name="experied_produk">Kadaluarsa : </string>
    <string name="jml_beli">Jumlah Beli</string>
    <string name="title_buy">Beli</string>
    <string name="title_hint_search">Mau belanja apa hari ini...</string>

    <string name="title_kategori">Kategori Produk</string>
    <string name="title_karkas">Karkas</string>
    <string name="title_ungkep">Ungkep</string>
    <string name="title_keripik">Keripik</string>
    <string name="title_atiampela">Ati Ampela</string>

    <string name="title_cart">Cart</string>
    <string name="title_new_product">Produk Terbaru</string>
    <string name="title_address">Cilame, Bandung Barat</string>
    <string name="title_informasi">Informasi Pribadi</string>
    <string name="title_product_sell">Produk yang sudah dibeli</string>
    <string name="conten_descimage_about">Deskripsi Image</string>
    <string name="conten_descimage_detail">Deskripsi Image</string>
    <string name="conten_descimage_kategori">Deskripsi Image</string>
    <string name="conten_descimage_splash">Deskripsi Image</string>
    <string name="about_notlp">No Tlp : </string>
    <string name="about_email">E-mail : </string>
    <string name="about_alamat">Alamat : </string>

    <string name="tambah">Tambah</string>
</resources>
