<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/activity_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:padding="@dimen/activity_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_karkas"
                android:textSize="@dimen/size_title"
                android:fontFamily="@font/sfprolight"/>
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/ktup_karkas"
                android:contentDescription="@string/conten_descimage_kategori" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/activity_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:padding="@dimen/activity_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_ungkep"
                android:layout_marginRight="25dp"
                android:textSize="@dimen/size_title"
                android:fontFamily="@font/sfprolight"
                android:layout_marginEnd="25dp" />
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/ktup_ungkep"
                android:contentDescription="@string/conten_descimage_kategori" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/activity_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:padding="@dimen/activity_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_keripik"
                android:textSize="@dimen/size_title"
                android:fontFamily="@font/sfprolight"/>
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/ktup_keripik"
                android:contentDescription="@string/conten_descimage_kategori" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/activity_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:padding="@dimen/activity_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_atiampela"
                android:layout_marginRight="30dp"
                android:textSize="@dimen/size_title"
                android:fontFamily="@font/sfprolight"
                android:layout_marginEnd="30dp" />
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/ktup_atiampela"
                android:contentDescription="@string/conten_descimage_kategori" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>